--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,2 @@
-bin*
-xtbconv/derived/xtbdict/*
-xtbconv/derived/temp/*
-xtbconv/derived/logs/*
-xtbconv/derived/compression/*
+xtbconv/bin/*
+xtbconv/generated/*
